// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalCreateButton /> should render correctly 1`] = `
<Connect(LoginOverlay)>
  <button
    className="btn btn-primary"
    disabled={false}
    id="add-proposal"
    onClick={[MockFunction]}
    type="button"
  >
    <i
      className="cap cap-add-1"
    />
    <FormattedMessage
      id="proposal.add"
      values={Object {}}
    />
  </button>
</Connect(LoginOverlay)>
`;

exports[`<ProposalCreateButton /> should render correctly as Interpellation 1`] = `
<Connect(LoginOverlay)>
  <button
    className="btn btn-primary"
    disabled={false}
    id="add-proposal"
    onClick={[MockFunction]}
    type="button"
  >
    <i
      className="cap cap-add-1"
    />
    <FormattedMessage
      id="interpellation.add"
      values={Object {}}
    />
  </button>
</Connect(LoginOverlay)>
`;

exports[`<ProposalCreateButton /> should render correctly as Question 1`] = `
<Connect(LoginOverlay)>
  <button
    className="btn btn-primary"
    disabled={false}
    id="add-proposal"
    onClick={[MockFunction]}
    type="button"
  >
    <i
      className="cap cap-add-1"
    />
    <FormattedMessage
      id="submit-a-question"
      values={Object {}}
    />
  </button>
</Connect(LoginOverlay)>
`;

exports[`<ProposalCreateButton /> should render correctly as tipsmeee 1`] = `
<Connect(LoginOverlay)>
  <button
    className="btn btn-primary"
    disabled={false}
    id="add-proposal"
    onClick={[MockFunction]}
    type="button"
  >
    <i
      className="cap cap-add-1"
    />
    <FormattedMessage
      id="proposal.add"
      values={Object {}}
    />
  </button>
</Connect(LoginOverlay)>
`;

exports[`<ProposalCreateButton /> should render correctly when disabled 1`] = `
<Connect(LoginOverlay)>
  <button
    className="btn btn-primary"
    disabled={true}
    id="add-proposal"
    onClick={null}
    type="button"
  >
    <i
      className="cap cap-add-1"
    />
    <FormattedMessage
      id="proposal.add"
      values={Object {}}
    />
  </button>
</Connect(LoginOverlay)>
`;
